--- a/css/experience.css
+++ b/css/experience.css
@@ -3,7 +3,8 @@
   justify-content: center;
 }
 #experience img {
-  max-width: 20rem;
+  width: 15rem;
+  height: 15rem;
 }
 #experience > div div {
   display: flex;
